# eqx-cam

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/eqx_cam/: __init__.py  cam.py
tests/: test_eqx_cam.py
