[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eqx-cam"
version = "0.1.0"
description = "copy-and-mutate for Equinox modules: a context manager for ergonomic, in-place-feeling edits of frozen Equinox modules."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Misha Lvovsky", email = "m.lvovsky66@gmail.com" }]
keywords = ["jax", "equinox", "pytree", "dataclass", "mutation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["equinox>=0.13.4"]

[project.urls]
Homepage = "https://github.com/mishmish/eqx-cam"
Repository = "https://github.com/mishmish/eqx-cam"
Issues = "https://github.com/mishmish/eqx-cam/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eqx_cam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
